# Word-find

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  docs.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
finder/: admin.py  apps.py  documents.py  forms.py  models.py  search.py  services.py  tests.py  urls.py  views.py
finder_api/: apps.py  serializers.py  services.py  tests.py  urls.py  views.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_20712a682defeafe___init___py.html  z_244a96f541740a51___init___py.html  z_244a96f541740a51_admin_py.html  z_244a96f541740a51_apps_py.html  z_244a96f541740a51_models_py.html  z_244a96f541740a51_serializers_py.html  z_244a96f541740a51_services_py.html  z_244a96f541740a51_tests_py.html  z_244a96f541740a51_urls_py.html  z_244a96f541740a51_views_py.html  z_809601a66e33f4cc___init___py.html  z_9740a1dbee3fded2___init___py.html  z_a33b94da80cf243f___init___py.html  z_a33b94da80cf243f_admin_py.html  z_a33b94da80cf243f_apps_py.html  z_a33b94da80cf243f_documents_py.html  z_a33b94da80cf243f_forms_py.html  z_a33b94da80cf243f_models_py.html  z_a33b94da80cf243f_services_py.html  z_a33b94da80cf243f_tests_py.html  z_a33b94da80cf243f_urls_py.html  z_a33b94da80cf243f_views_py.html  z_d7caba16f2a88201_0001_initial_py.html  z_d7caba16f2a88201_0002_user_token_py.html  z_d7caba16f2a88201___init___py.html  z_e7b6366c0db41e37_0001_initial_py.html  (+9 more)
users/: admin.py  (+4 more)
(+20 files in other folders)
